--- a/src/app/photos/photo-list/photo-list.component.html
+++ b/src/app/photos/photo-list/photo-list.component.html
@@ -1,14 +1,10 @@
-<p class="text-center text-muted" *ngIf="!photos.length">
-    Sorry, no photos
-</p>
-
 <div class="text-center mt-3 mb-3">
   <form>
       <input class="rounded"
        type="search"
         placeholder="search..."
          autofocus
-         (keyup)="filter = $event.target.value"
+         (keyup)="debounce.next($event.target.value)"
          >
   
   </form>
